--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,8 @@
         style="@style/layout_wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/calculate_button"
-        android:text="@string/tip_amount" />
+        tools:text="Tip Amount: $10"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
