--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -13,9 +13,19 @@
         <item name="android:inputType">numberDecimal</item>
     </style>
 
-    <style name="layout_wrap_content">
+    <style name="tip_calculator_textview" parent="Widget.MaterialComponents.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">@dimen/_45sdp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textAppearance">?attr/textAppearanceBody1</item>
+    </style>
+
+    <style name="radio_button" parent="Widget.MaterialComponents.CompoundButton.RadioButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingStart">@dimen/_5sdp</item>
+        <item name="android:textAppearance">?attr/textAppearanceBody1</item>
     </style>
 
     <style name="tip_option_radiogroup">
@@ -25,11 +35,14 @@
         <item name="android:checkedButton">@id/option_twenty_percent</item>
     </style>
 
-    <style name="switch_style">
+    <style name="switch_style" parent="Widget.MaterialComponents.CompoundButton.Switch">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:text">@string/round_up_tip</item>
         <item name="android:checked">true</item>
+        <item name="android:minHeight">@dimen/_45sdp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textAppearance">?attr/textAppearanceBody1</item>
     </style>
 
 </resources>
